:bug: fix missing parenthesis in profiles.yml

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -35,3 +35,5 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+    marts:
+      +materialized: table
