:wrench: add staging tag to stg_sdcs__airbase

--- a/models/staging/_sdcs__model.yml
+++ b/models/staging/_sdcs__model.yml
@@ -8,6 +8,7 @@ models:
       tags:
         - structured
         - slowly_changing
+        - staging
     columns:
       - name: id
         tests:
