--- a/models/staging/_sdcs__model.yml
+++ b/models/staging/_sdcs__model.yml
@@ -29,7 +29,7 @@ models:
                 - "BLUE"
                 - "RED"
                 - "NEUTRAL"
-      - name: name
+      - name: airbase_name
         description: The name of the airbase 
         tests:
           - not_null
