:ambulance: fix project config files

--- a/profiles.yml
+++ b/profiles.yml
@@ -2,14 +2,35 @@ config:
   send_anonymous_usage_stats: False
   use_colors: True
 
-sdcs_data:
+sdcs:
   target: dev
   outputs:
     dev:
       type: postgres
-      host: "localhost"
-      user: "postgres"
-      pass: 
-      port: 5432
-      dbname: "sdcs"
-      schema: "sdcs"
+      threads: 4
+      host: "{{ env_var('DB_HOST') }}"
+      port: "{{ env_var('DB_PORT') | as_number }}"
+      user: "{{ env_var('DB_USER' )}}"
+      password: "{{ env_var('DB_PASSWORD' )}}"
+      dbname: "{{ env_var('DB_NAME') }}"
+      schema: "{{ env_var('DB_SCHEMA') }}"
+
+    prod:
+      type: postgres
+      threads: 4
+      host: "{{ env_var('DBT_ENV_SECRET_DB_HOST') }}"
+      port: "{{ env_var('DB_PORT') | as_number }}"
+      user: "{{ env_var('DBT_ENV_SECRET_DB_USER' )}}"
+      password: "{{ env_var('DBT_ENV_SECRET_DB_PASSWORD') )}}"
+      dbname: "{{ env_var('DBT_ENV_SECRET_DB_NAME') }}"
+      schema: analysis
+
+    ci:
+      type: postgres
+      threads: 4
+      host: "{{ env_var('DBT_ENV_SECRET_DB_HOST') }}"
+      port: "{{ env_var('DB_PORT') | as_number }}"
+      user: "{{ env_var('DBT_ENV_SECRET_DB_USER' )}}"
+      password: "{{ env_var('DBT_ENV_SECRET_DB_PASSWORD') )}}"
+      dbname: "{{ env_var('DBT_ENV_SECRET_DB_NAME') }}"
+      schema: dbt_ci
