--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,12 +1,13 @@
+
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: "sdcs_data"
-version: "1.0.0"
+name: 'sdcs'
+version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
-profile: "sdcs_data"
+profile: 'sdcs'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -18,9 +19,10 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets: # directories to be removed by `dbt clean`
+clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
+
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -30,8 +32,6 @@ clean-targets: # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   sdcs:
-    vars:
-      load-env: dbt_env.load_env
     # Config indicated by + and applies to all files under models/example/
     marts:
       +materialized: table
