Add tests to kills

--- a/models/staging/_sdcs__model.yml
+++ b/models/staging/_sdcs__model.yml
@@ -181,3 +181,103 @@ models:
           - dbt_utils.accepted_range:
               min_value: 0
 
+  - name: stg_sdcs__kills
+    description:
+      Hit events
+    config:
+      tags:
+        - structured
+        - staging
+    columns:
+      - name: event_id
+        description: Primary key of the event
+        tests:
+          - not_null
+      - name: campaign_id
+        description: The campaign that the event occured in.
+        tests:
+          - not_null
+      - name: initiator_user_id
+        description: The id of the user that fired the weapon.
+      - name: target_user_id
+        description: The id of the user that died
+      - name: target_user_id
+        description: The id of the user that died
+      - name: datetime_created
+        description: The timestamp that the kill occured on
+        tests:
+          - not_null
+      - name: date_created
+        description: The date the kill happened
+        tests:
+          - not_null
+      - name: time_created
+        description: The time part of the datetime_created
+        tests:
+          - not_null
+      - name: initiator_started_in_air
+        description: Whether the initiator spawned in the air.
+        tests:
+          - not_null
+      - name: target_started_in_air
+        description: Whether the target spawned in the air.
+        tests:
+          - not_null
+      - name: initiator_name
+        description: The name of the initiator
+      - name: initiator_type
+        description: > 
+          The type of unit or static that fired the weapon. Null for scenery.
+      - name: initiator_callsign
+        description: The callsign of the initiator as set in the miz file
+      - name: initiator_coalition
+        description: The coalition that the initiator is in.
+        tests:
+          - not_null
+          - accepted_values: 
+              values:
+                - "Blue"
+                - "Red"
+                - "Neutral"
+      - name: initiator_group_name
+        description: The name of the group that initiator is in.
+      - name: initiator_group_category
+        description: The category of vehicle the initiator's group is in
+        tests:
+          - accepted_values: 
+              values:
+                - "Airplane"
+                - "Helicopter"
+                - "Ground"
+              config: 
+                where: "initiator_group_category IS NOT NULL"
+      - name: initiator_group_coalition
+        description: The coalition that the group of initiator is in.
+        tests:
+          - not_null
+          - accepted_values: 
+              values:
+                - "Blue"
+                - "Red"
+                - "Neutral"
+      - name: initiator_player_name
+        description: The name of the player that fired the weapon
+      - name: target_coalition
+        description: The coalition that the target is in.
+        tests:
+          - not_null
+          - accepted_values: 
+              values:
+                - "Blue"
+                - "Red"
+                - "Neutral"
+      - name: target_group_category
+        description: The category of vehicle the target's group is in
+        tests:
+          - accepted_values: 
+              values:
+                - "Airplane"
+                - "Helicopter"
+                - "Ground"
+              config: 
+                where: "target_group_category IS NOT NULL"
